# JniTest

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/rhb/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FilePerform.c  FilePerform.h  LogUtils.h  sample.c
app/src/main/java/rhb/jnitest/: BaseType.java  LogUtils.java  MainActivity.java
app/src/main/java/rhb/jnitest/iotest/: IOUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/rhb/jnitest/: ExampleUnitTest.java
